style:testimonial avatar

--- a/index.html
+++ b/index.html
@@ -224,11 +224,11 @@
                 scelerisque eros, sed tempor velit consectetur in. Morbi tincidunt
               </p>
               <a href="#" class="learn-btn">
-                <img src="./assets/part3/learn-btn.svg" alt="">
+                <img width="200" src="./assets/part3/learn-btn.svg" alt="">
               </a>
               <div class="subline mt-3"></div>
             </div>
-            <div class="w-100 reverse-1">
+            <div class="w-100 text-center reverse-1">
               <img class="dashboard-image w-100 rounded-05" src="./assets/part3/content.webp" alt=""
                 class="img-fluid rounded shadow">
             </div>
@@ -236,7 +236,7 @@
         </div>
         <div class="d-flex flex-column gap-8rem">
           <div class="screen-max-768 gap-4rem">
-            <div class="w-100">
+            <div class="w-100 text-center">
               <img class="dashboard-image w-100 rounded-05" src="./assets/part3/content.webp" alt=""
                 class="img-fluid rounded shadow">
             </div>
@@ -249,49 +249,7 @@
                 scelerisque eros, sed tempor velit consectetur in. Morbi tincidunt
               </p>
               <a href="#" class="learn-btn">
-                <img src="./assets/part3/learn-btn.svg" alt="">
-              </a>
-              <div class="subline mt-3"></div>
-            </div>
-          </div>
-        </div>
-        <div class="d-flex flex-column gap-8rem">
-          <div class="screen-max-768 gap-4rem">
-            <div class="w-100 reverse-2">
-              <h1 class="subtitle mb-3">Minimize Optimizations</h1>
-              <p class="fs-6">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed aliquet
-                scelerisque eros, sed tempor velit consectetur in. Morbi tincidunt Lorem
-                ipsum dolor sit amet, consectetur adipiscing elit. Sed aliquet
-                scelerisque eros, sed tempor velit consectetur in. Morbi tincidunt
-              </p>
-              <a href="#" class="learn-btn">
-                <img src="./assets/part3/learn-btn.svg" alt="">
-              </a>
-              <div class="subline mt-3"></div>
-            </div>
-            <div class="w-100 reverse-1">
-              <img class="dashboard-image w-100 rounded-05" src="./assets/part3/content.webp" alt=""
-                class="img-fluid rounded shadow">
-            </div>
-          </div>
-        </div>
-        <div class="d-flex flex-column gap-8rem">
-          <div class="screen-max-768 gap-4rem">
-            <div class="w-100">
-              <img class="dashboard-image w-100 rounded-05" src="./assets/part3/content.webp" alt=""
-                class="img-fluid rounded shadow">
-            </div>
-            <div class="w-100">
-              <h1 class="subtitle mb-3">Minimize Optimizations</h1>
-              <p class="fs-6">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed aliquet
-                scelerisque eros, sed tempor velit consectetur in. Morbi tincidunt Lorem
-                ipsum dolor sit amet, consectetur adipiscing elit. Sed aliquet
-                scelerisque eros, sed tempor velit consectetur in. Morbi tincidunt
-              </p>
-              <a href="#" class="learn-btn">
-                <img src="./assets/part3/learn-btn.svg" alt="">
+                <img width="200" src="./assets/part3/learn-btn.svg" alt="">
               </a>
               <div class="subline mt-3"></div>
             </div>
@@ -308,11 +266,53 @@
                 scelerisque eros, sed tempor velit consectetur in. Morbi tincidunt
               </p>
               <a href="#" class="learn-btn">
-                <img src="./assets/part3/learn-btn.svg" alt="">
+                <img width="200" src="./assets/part3/learn-btn.svg" alt="">
               </a>
               <div class="subline mt-3"></div>
             </div>
-            <div class="w-100 reverse-1">
+            <div class="w-100 text-center reverse-1">
+              <img class="dashboard-image w-100 rounded-05" src="./assets/part3/content.webp" alt=""
+                class="img-fluid rounded shadow">
+            </div>
+          </div>
+        </div>
+        <div class="d-flex flex-column gap-8rem">
+          <div class="screen-max-768 gap-4rem">
+            <div class="w-100 text-center">
+              <img class="dashboard-image w-100 rounded-05" src="./assets/part3/content.webp" alt=""
+                class="img-fluid rounded shadow">
+            </div>
+            <div class="w-100">
+              <h1 class="subtitle mb-3">Minimize Optimizations</h1>
+              <p class="fs-6">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed aliquet
+                scelerisque eros, sed tempor velit consectetur in. Morbi tincidunt Lorem
+                ipsum dolor sit amet, consectetur adipiscing elit. Sed aliquet
+                scelerisque eros, sed tempor velit consectetur in. Morbi tincidunt
+              </p>
+              <a href="#" class="learn-btn">
+                <img width="200" src="./assets/part3/learn-btn.svg" alt="">
+              </a>
+              <div class="subline mt-3"></div>
+            </div>
+          </div>
+        </div>
+        <div class="d-flex flex-column gap-8rem">
+          <div class="screen-max-768 gap-4rem">
+            <div class="w-100 reverse-2">
+              <h1 class="subtitle mb-3">Minimize Optimizations</h1>
+              <p class="fs-6">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed aliquet
+                scelerisque eros, sed tempor velit consectetur in. Morbi tincidunt Lorem
+                ipsum dolor sit amet, consectetur adipiscing elit. Sed aliquet
+                scelerisque eros, sed tempor velit consectetur in. Morbi tincidunt
+              </p>
+              <a href="#" class="learn-btn">
+                <img width="200" src="./assets/part3/learn-btn.svg" alt="">
+              </a>
+              <div class="subline mt-3"></div>
+            </div>
+            <div class="w-100 text-center reverse-1">
               <img class="dashboard-image w-100 rounded-05" src="./assets/part3/content.webp" alt=""
                 class="img-fluid rounded shadow">
             </div>
@@ -335,7 +335,7 @@
               <p class="m-0">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
                 commodo consequat aute irure sint amet occaecat cupidatat non proident</p>
               <div class="d-flex flex-row gap-1rem">
-                <img class="testimonial-avatar" src="./assets/testimonial/avatar.webp" alt="">
+                <img class="testimonial-avatar" width="50" height="50" src="./assets/testimonial/avatar.webp" alt="">
                 <div class="flex flex-column">
                   <p class="m-0 fw-bold">Sophia Moore</p>
                   <p class="m-0">CEO at Webflow Agency</p>
@@ -347,7 +347,7 @@
               <p class="m-0">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
                 commodo consequat aute irure sint amet occaecat cupidatat non proident</p>
               <div class="d-flex flex-row gap-1rem">
-                <img class="testimonial-avatar" src="./assets/testimonial/avatar.webp" alt="">
+                <img class="testimonial-avatar" width="50" height="50" src="./assets/testimonial/avatar.webp" alt="">
                 <div class="flex flex-column">
                   <p class="m-0 fw-bold">Sophia Moore</p>
                   <p class="m-0">CEO at Webflow Agency</p>
@@ -359,7 +359,7 @@
               <p class="m-0">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
                 commodo consequat aute irure sint amet occaecat cupidatat non proident</p>
               <div class="d-flex flex-row gap-1rem">
-                <img class="testimonial-avatar" src="./assets/testimonial/avatar.webp" alt="">
+                <img class="testimonial-avatar" width="50" height="50" src="./assets/testimonial/avatar.webp" alt="">
                 <div class="flex flex-column">
                   <p class="m-0 fw-bold">Sophia Moore</p>
                   <p class="m-0">CEO at Webflow Agency</p>
@@ -371,7 +371,7 @@
               <p class="m-0">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
                 commodo consequat aute irure sint amet occaecat cupidatat non proident</p>
               <div class="d-flex flex-row gap-1rem">
-                <img class="testimonial-avatar" src="./assets/testimonial/avatar.webp" alt="">
+                <img class="testimonial-avatar" width="50" height="50" src="./assets/testimonial/avatar.webp" alt="">
                 <div class="flex flex-column">
                   <p class="m-0 fw-bold">Sophia Moore</p>
                   <p class="m-0">CEO at Webflow Agency</p>
@@ -383,7 +383,7 @@
               <p class="m-0">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
                 commodo consequat aute irure sint amet occaecat cupidatat non proident</p>
               <div class="d-flex flex-row gap-1rem">
-                <img class="testimonial-avatar" src="./assets/testimonial/avatar.webp" alt="">
+                <img class="testimonial-avatar" width="50" height="50" src="./assets/testimonial/avatar.webp" alt="">
                 <div class="flex flex-column">
                   <p class="m-0 fw-bold">Sophia Moore</p>
                   <p class="m-0">CEO at Webflow Agency</p>
@@ -395,7 +395,7 @@
               <p class="m-0">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
                 commodo consequat aute irure sint amet occaecat cupidatat non proident</p>
               <div class="d-flex flex-row gap-1rem">
-                <img class="testimonial-avatar" src="./assets/testimonial/avatar.webp" alt="">
+                <img class="testimonial-avatar" width="50" height="50" src="./assets/testimonial/avatar.webp" alt="">
                 <div class="flex flex-column">
                   <p class="m-0 fw-bold">Sophia Moore</p>
                   <p class="m-0">CEO at Webflow Agency</p>
