style:bg-color testimonials technology

--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
     </div>
   </div>
   </div>
-  <div class="part3">
+  <div class="products">
     <div class="max-width-1280 paddingy-64 paddingx-32 mx-auto">
       <p class="title-gradient">
         How brands leverage Heystack Insights
@@ -322,7 +322,7 @@
       </div>
     </div>
   </div>
-  <div class="part4">
+  <div class="testimonials">
     <div class="max-width-1280 paddingy-64 paddingx-32 mx-auto">
       <p class="title-gradient m-0">
         Testimonials
@@ -427,43 +427,43 @@
       </div>
     </div>
   </div>
-  <div class="max-width-1280 paddingy-64 paddingx-32 mx-auto">
+  <div class="technology max-width-1280 paddingy-64 paddingx-32 mx-auto" id="technology">
     <p class="title-gradient m-0">
       What is Unique about Heystack?
     </p>
-    <div class="unique-container row d-flex flex-wrap align-content-start margintop-64">
-      <div class="unique-card col-4 d-flex flex-column gap-1rem p-4">
-        <img class="unique-img" src="./assets/unique/Brain.svg" alt="">
+    <div class="technology-container row d-flex flex-wrap align-content-start margintop-64">
+      <div class="technology-card col-4 d-flex flex-column gap-1rem p-4">
+        <img class="technology-img" src="./assets/technology/Brain.svg" alt="">
         <p class="font-20 fw-bold m-0">Robust & Massively trained models</p>
         <p class="fs-6 m-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed aliquet scelerisque eros, sed
           tempor velit consectetur in. Morbi tincidunt</p>
       </div>
-      <div class="unique-card col-4 d-flex flex-column gap-1rem p-4">
-        <img class="unique-img" src="./assets/unique/Data.svg" alt="">
+      <div class="technology-card col-4 d-flex flex-column gap-1rem p-4">
+        <img class="technology-img" src="./assets/technology/Data.svg" alt="">
         <p class="font-20 fw-bold m-0">Data From Everywhere & Anywhere</p>
         <p class="fs-6 m-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed aliquet scelerisque eros, sed
           tempor velit consectetur in. Morbi tincidunt</p>
       </div>
-      <div class="unique-card col-4 d-flex flex-column gap-1rem p-4">
-        <img class="unique-img" src="./assets/unique/Key.svg" alt="">
+      <div class="technology-card col-4 d-flex flex-column gap-1rem p-4">
+        <img class="technology-img" src="./assets/technology/Key.svg" alt="">
         <p class="font-20 fw-bold m-0">Data From Everywhere & Anywhere</p>
         <p class="fs-6 m-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed aliquet scelerisque eros, sed
           tempor velit consectetur in. Morbi tincidunt</p>
       </div>
-      <div class="unique-card col-4 d-flex flex-column gap-1rem p-4">
-        <img class="unique-img" src="./assets/unique/Business.svg" alt="">
+      <div class="technology-card col-4 d-flex flex-column gap-1rem p-4">
+        <img class="technology-img" src="./assets/technology/Business.svg" alt="">
         <p class="font-20 fw-bold m-0">Robust & Massively trained models</p>
         <p class="fs-6 m-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed aliquet scelerisque eros, sed
           tempor velit consectetur in. Morbi tincidunt</p>
       </div>
-      <div class="unique-card col-4 d-flex flex-column gap-1rem p-4">
-        <img class="unique-img" src="./assets/unique/Business_2.svg" alt="">
+      <div class="technology-card col-4 d-flex flex-column gap-1rem p-4">
+        <img class="technology-img" src="./assets/technology/Business_2.svg" alt="">
         <p class="font-20 fw-bold m-0">Data From Everywhere & Anywhere</p>
         <p class="fs-6 m-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed aliquet scelerisque eros, sed
           tempor velit consectetur in. Morbi tincidunt</p>
       </div>
-      <div class="unique-card col-4 d-flex flex-column gap-1rem p-4">
-        <img class="unique-img" src="./assets/unique/Business.svg" alt="">
+      <div class="technology-card col-4 d-flex flex-column gap-1rem p-4">
+        <img class="technology-img" src="./assets/technology/Business.svg" alt="">
         <p class="font-20 fw-bold m-0">Data From Everywhere & Anywhere</p>
         <p class="fs-6 m-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed aliquet scelerisque eros, sed
           tempor velit consectetur in. Morbi tincidunt</p>
@@ -471,98 +471,98 @@
     </div>
   </div>
 
-  <div class="part6 max-width-1280 paddingy-64 paddingx-32 mx-auto">
+  <div class="max-width-1280 paddingy-64 paddingx-32 mx-auto" id="retailers">
     <p class="title-gradient m-0">
       Retail Partners?
     </p>
-    <div class="position-relative swiper-container swiper">
+    <div class="position-relative swiper-container swiper mt-5">
       <div class="retailers-content">
         <div class="card-wrapper swiper-wrapper" style=" display: flex; flex-direction: row;">
           <div class="d-flex flex-column gap-40 swiper-slide">
-            <div class="partner-card">
+            <div class="retiler-card">
               <img src="./assets/retailers/target.svg" alt="">
             </div>
-            <div class="partner-card">
+            <div class="retiler-card">
               <img src="./assets/retailers/zappos.svg" alt="">
             </div>
           </div>
           <div class="d-flex flex-column gap-40 swiper-slide">
-            <div class="partner-card">
+            <div class="retiler-card">
               <img src="./assets/retailers/bestbuy.svg" alt="">
             </div>
-            <div class="partner-card">
+            <div class="retiler-card">
               <img src="./assets/retailers/homedepot.svg" alt="">
             </div>
           </div>
           <div class="d-flex flex-column gap-40 swiper-slide">
-            <div class="partner-card">
+            <div class="retiler-card">
               <img src="./assets/retailers/lowes.svg" alt="">
             </div>
-            <div class="partner-card">
+            <div class="retiler-card">
               <img src="./assets/retailers/wayfire.svg" alt="">
             </div>
           </div>
           <div class="d-flex flex-column gap-40 swiper-slide">
-            <div class="partner-card">
+            <div class="retiler-card">
               <img src="./assets/retailers/chewy.svg" alt="">
             </div>
-            <div class="partner-card">
+            <div class="retiler-card">
               <img src="./assets/retailers/petco.svg" alt="">
             </div>
           </div>
           <div class="d-flex flex-column gap-40 swiper-slide">
-            <div class="partner-card">
+            <div class="retiler-card">
               <img src="./assets/retailers/restmart.svg" alt="">
             </div>
-            <div class="partner-card">
+            <div class="retiler-card">
               <img src="./assets/retailers/sephora.svg" alt="">
             </div>
           </div>
           <div class="d-flex flex-column gap-40 swiper-slide">
-            <div class="partner-card">
+            <div class="retiler-card">
               <img src="./assets/retailers/ulta.svg" alt="">
             </div>
-            <div class="partner-card">
+            <div class="retiler-card">
               <img src="./assets/retailers/chewy.svg" alt="">
             </div>
           </div>
           <div class="d-flex flex-column gap-40 swiper-slide">
-            <div class="partner-card">
+            <div class="retiler-card">
               <img src="./assets/retailers/macys.svg" alt="">
             </div>
-            <div class="partner-card">
+            <div class="retiler-card">
               <img src="./assets/retailers/nordstrom.svg" alt="">
             </div>
           </div>
           <div class="d-flex flex-column gap-40 swiper-slide">
-            <div class="partner-card">
+            <div class="retiler-card">
               <img src="./assets/retailers/kohls.svg" alt="">
             </div>
-            <div class="partner-card">
+            <div class="retiler-card">
               <img src="./assets/retailers/dicks.svg" alt="">
             </div>
           </div>
           <div class="d-flex flex-column gap-40 swiper-slide">
-            <div class="partner-card">
+            <div class="retiler-card">
               <img src="./assets/retailers/acehardware.svg" alt="">
             </div>
-            <div class="partner-card">
+            <div class="retiler-card">
               <img src="./assets/retailers/tractorsupply.svg" alt="">
             </div>
           </div>
           <div class="d-flex flex-column gap-40 swiper-slide">
-            <div class="partner-card">
+            <div class="retiler-card">
               <img src="./assets/retailers/academy.svg" alt="">
             </div>
-            <div class="partner-card">
+            <div class="retiler-card">
               <img src="./assets/retailers/dsw.svg" alt="">
             </div>
           </div>
         </div>
       </div>
 
-      <div class="swiper-button-next swiper-navBtn"></div>
-      <div class="swiper-button-prev swiper-navBtn"></div>
+      <div width="28" height="28" class="swiper-button-next swiper-navBtn"></div>
+      <div width="28" height="28" class="swiper-button-prev swiper-navBtn"></div>
     </div>
   </div>
   <div class="margintop-112 padding-24 ">
