style: responsive remove semicircle in home

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </head>
 
 <body>
-  <div class="part1 bg-gradient1">
+  <div class="home">
     <div class="semicircle position-absolute bottom-0 start-0">
       <img src="./assets/generative/semicircle.webp" alt="" />
     </div>
@@ -59,7 +59,7 @@
         <button class="nav-btn">SEE LIVE IN ACTION</button>
       </div>
     </div>
-    <div class="part1-main position-relative d-flex align-items-center m-auto w-100">
+    <div class="home-main position-relative d-flex align-items-center m-auto w-100">
       <div class="d-flex flex-column w-100">
         <div class="paddingx-40 mb-2">
           <h1 class="title text-center fw-bold">
@@ -86,7 +86,7 @@
       </div>
     </div>
   </div>
-  <div class="part2 paddingy-64">
+  <div class="paddingy-64" id="customers">
     <p class="text-center brands">Brands that <span class="text-primary">trust us</span></p>
     <div class="brand-slider py-3">
       <div class="slide-track">
@@ -225,12 +225,12 @@
                 scelerisque eros, sed tempor velit consectetur in. Morbi tincidunt
               </p>
               <a href="#" class="learn-btn">
-                <img width="200" src="./assets/part3/learn-btn.svg" alt="">
+                <img width="200" src="./assets/products/learn-btn.svg" alt="">
               </a>
               <div class="subline mt-3"></div>
             </div>
             <div class="w-100 text-center reverse-1">
-              <img class="dashboard-image w-100 rounded-05" src="./assets/part3/content.webp" alt=""
+              <img class="dashboard-image w-100 rounded-05" src="./assets/products/content.webp" alt=""
                 class="img-fluid rounded shadow">
             </div>
           </div>
@@ -238,7 +238,7 @@
         <div class="d-flex flex-column gap-8rem">
           <div class="screen-max-768 gap-4rem">
             <div class="w-100 text-center">
-              <img class="dashboard-image w-100 rounded-05" src="./assets/part3/content.webp" alt=""
+              <img class="dashboard-image w-100 rounded-05" src="./assets/products/content.webp" alt=""
                 class="img-fluid rounded shadow">
             </div>
             <div class="w-100">
@@ -250,7 +250,7 @@
                 scelerisque eros, sed tempor velit consectetur in. Morbi tincidunt
               </p>
               <a href="#" class="learn-btn">
-                <img width="200" src="./assets/part3/learn-btn.svg" alt="">
+                <img width="200" src="./assets/products/learn-btn.svg" alt="">
               </a>
               <div class="subline mt-3"></div>
             </div>
@@ -267,12 +267,12 @@
                 scelerisque eros, sed tempor velit consectetur in. Morbi tincidunt
               </p>
               <a href="#" class="learn-btn">
-                <img width="200" src="./assets/part3/learn-btn.svg" alt="">
+                <img width="200" src="./assets/products/learn-btn.svg" alt="">
               </a>
               <div class="subline mt-3"></div>
             </div>
             <div class="w-100 text-center reverse-1">
-              <img class="dashboard-image w-100 rounded-05" src="./assets/part3/content.webp" alt=""
+              <img class="dashboard-image w-100 rounded-05" src="./assets/products/content.webp" alt=""
                 class="img-fluid rounded shadow">
             </div>
           </div>
@@ -280,7 +280,7 @@
         <div class="d-flex flex-column gap-8rem">
           <div class="screen-max-768 gap-4rem">
             <div class="w-100 text-center">
-              <img class="dashboard-image w-100 rounded-05" src="./assets/part3/content.webp" alt=""
+              <img class="dashboard-image w-100 rounded-05" src="./assets/products/content.webp" alt=""
                 class="img-fluid rounded shadow">
             </div>
             <div class="w-100">
@@ -292,7 +292,7 @@
                 scelerisque eros, sed tempor velit consectetur in. Morbi tincidunt
               </p>
               <a href="#" class="learn-btn">
-                <img width="200" src="./assets/part3/learn-btn.svg" alt="">
+                <img width="200" src="./assets/products/learn-btn.svg" alt="">
               </a>
               <div class="subline mt-3"></div>
             </div>
@@ -309,12 +309,12 @@
                 scelerisque eros, sed tempor velit consectetur in. Morbi tincidunt
               </p>
               <a href="#" class="learn-btn">
-                <img width="200" src="./assets/part3/learn-btn.svg" alt="">
+                <img width="200" src="./assets/products/learn-btn.svg" alt="">
               </a>
               <div class="subline mt-3"></div>
             </div>
             <div class="w-100 text-center reverse-1">
-              <img class="dashboard-image w-100 rounded-05" src="./assets/part3/content.webp" alt=""
+              <img class="dashboard-image w-100 rounded-05" src="./assets/products/content.webp" alt=""
                 class="img-fluid rounded shadow">
             </div>
           </div>
