--- a/index.html
+++ b/index.html
@@ -427,50 +427,51 @@
       </div>
     </div>
   </div>
-  <div class="technology max-width-1280 paddingy-64 paddingx-32 mx-auto" id="technology">
-    <p class="title-gradient m-0">
-      What is Unique about Heystack?
-    </p>
-    <div class="technology-container row d-flex flex-wrap align-content-start margintop-64">
-      <div class="technology-card col-4 d-flex flex-column gap-1rem p-4">
-        <img class="technology-img" src="./assets/technology/Brain.svg" alt="">
-        <p class="font-20 fw-bold m-0">Robust & Massively trained models</p>
-        <p class="fs-6 m-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed aliquet scelerisque eros, sed
-          tempor velit consectetur in. Morbi tincidunt</p>
-      </div>
-      <div class="technology-card col-4 d-flex flex-column gap-1rem p-4">
-        <img class="technology-img" src="./assets/technology/Data.svg" alt="">
-        <p class="font-20 fw-bold m-0">Data From Everywhere & Anywhere</p>
-        <p class="fs-6 m-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed aliquet scelerisque eros, sed
-          tempor velit consectetur in. Morbi tincidunt</p>
-      </div>
-      <div class="technology-card col-4 d-flex flex-column gap-1rem p-4">
-        <img class="technology-img" src="./assets/technology/Key.svg" alt="">
-        <p class="font-20 fw-bold m-0">Data From Everywhere & Anywhere</p>
-        <p class="fs-6 m-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed aliquet scelerisque eros, sed
-          tempor velit consectetur in. Morbi tincidunt</p>
-      </div>
-      <div class="technology-card col-4 d-flex flex-column gap-1rem p-4">
-        <img class="technology-img" src="./assets/technology/Business.svg" alt="">
-        <p class="font-20 fw-bold m-0">Robust & Massively trained models</p>
-        <p class="fs-6 m-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed aliquet scelerisque eros, sed
-          tempor velit consectetur in. Morbi tincidunt</p>
-      </div>
-      <div class="technology-card col-4 d-flex flex-column gap-1rem p-4">
-        <img class="technology-img" src="./assets/technology/Business_2.svg" alt="">
-        <p class="font-20 fw-bold m-0">Data From Everywhere & Anywhere</p>
-        <p class="fs-6 m-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed aliquet scelerisque eros, sed
-          tempor velit consectetur in. Morbi tincidunt</p>
-      </div>
-      <div class="technology-card col-4 d-flex flex-column gap-1rem p-4">
-        <img class="technology-img" src="./assets/technology/Business.svg" alt="">
-        <p class="font-20 fw-bold m-0">Data From Everywhere & Anywhere</p>
-        <p class="fs-6 m-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed aliquet scelerisque eros, sed
-          tempor velit consectetur in. Morbi tincidunt</p>
+  <div class="technology">
+    <div class="max-width-1280 paddingy-64 paddingx-32 mx-auto" id="technology">
+      <p class="title-gradient m-0">
+        What is Unique about Heystack?
+      </p>
+      <div class="technology-container row d-flex flex-wrap align-content-start margintop-64">
+        <div class="technology-card col-4 d-flex flex-column gap-1rem p-4">
+          <img class="technology-img" src="./assets/technology/Brain.svg" alt="">
+          <p class="font-20 fw-bold m-0">Robust & Massively trained models</p>
+          <p class="fs-6 m-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed aliquet scelerisque eros, sed
+            tempor velit consectetur in. Morbi tincidunt</p>
+        </div>
+        <div class="technology-card col-4 d-flex flex-column gap-1rem p-4">
+          <img class="technology-img" src="./assets/technology/Data.svg" alt="">
+          <p class="font-20 fw-bold m-0">Data From Everywhere & Anywhere</p>
+          <p class="fs-6 m-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed aliquet scelerisque eros, sed
+            tempor velit consectetur in. Morbi tincidunt</p>
+        </div>
+        <div class="technology-card col-4 d-flex flex-column gap-1rem p-4">
+          <img class="technology-img" src="./assets/technology/Key.svg" alt="">
+          <p class="font-20 fw-bold m-0">Data From Everywhere & Anywhere</p>
+          <p class="fs-6 m-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed aliquet scelerisque eros, sed
+            tempor velit consectetur in. Morbi tincidunt</p>
+        </div>
+        <div class="technology-card col-4 d-flex flex-column gap-1rem p-4">
+          <img class="technology-img" src="./assets/technology/Business.svg" alt="">
+          <p class="font-20 fw-bold m-0">Robust & Massively trained models</p>
+          <p class="fs-6 m-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed aliquet scelerisque eros, sed
+            tempor velit consectetur in. Morbi tincidunt</p>
+        </div>
+        <div class="technology-card col-4 d-flex flex-column gap-1rem p-4">
+          <img class="technology-img" src="./assets/technology/Business_2.svg" alt="">
+          <p class="font-20 fw-bold m-0">Data From Everywhere & Anywhere</p>
+          <p class="fs-6 m-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed aliquet scelerisque eros, sed
+            tempor velit consectetur in. Morbi tincidunt</p>
+        </div>
+        <div class="technology-card col-4 d-flex flex-column gap-1rem p-4">
+          <img class="technology-img" src="./assets/technology/Business.svg" alt="">
+          <p class="font-20 fw-bold m-0">Data From Everywhere & Anywhere</p>
+          <p class="fs-6 m-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed aliquet scelerisque eros, sed
+            tempor velit consectetur in. Morbi tincidunt</p>
+        </div>
       </div>
     </div>
   </div>
-
   <div class="max-width-1280 paddingy-64 paddingx-32 mx-auto" id="retailers">
     <p class="title-gradient m-0">
       Retail Partners?
