--- a/index.html
+++ b/index.html
@@ -567,7 +567,7 @@
     </div>
   </div>
   <div class="margintop-112 padding-24 ">
-    <div class="footer-container d-flex flex-row justify-content-between padding-80">
+    <div class="footer-container padding-80">
       <div class="d-flex flex-column gap-3 font-14">
         <div class="logo d-flex align-items-center gap-2">
           <img class="logo-img" src="./assets/logo/logo.webp" alt="" />
@@ -582,31 +582,37 @@
           <p class="m-0">Email: contact@hey-stack.com</p>
         </div>
       </div>
-      <div class="d-flex flex-row gap-5rem">
-        <div>
-          <p class="fw-bold">Home</p>
-          <p class="mt-3 mb-0">Customers</p>
-          <p class="mt-3 mb-0">Products</p>
-          <p class="mt-3 mb-0">Testimonials</p>
-          <p class="mt-3 mb-0">Features</p>
-          <p class="mt-3 mb-0">Retail Partners</p>
+      <div class="d-flex flex-wrap gap-5rem">
+        <!-- <div class="screen-586"> -->
+        <div class="d-flex flex-wrap gap-5rem">
+          <div class="">
+            <p class="fw-bold">Home</p>
+            <p class="mt-3 mb-0">Customers</p>
+            <p class="mt-3 mb-0">Products</p>
+            <p class="mt-3 mb-0">Testimonials</p>
+            <p class="mt-3 mb-0">Features</p>
+            <p class="mt-3 mb-0">Retail Partners</p>
+          </div>
+          <div class="">
+            <p class="fw-bold">Resourse</p>
+            <p class="mt-3 mb-0">Blogs</p>
+            <p class="mt-3 mb-0">Career</p>
+            <p class="mt-3 mb-0">Teams of Service</p>
+            <p class="mt-3 mb-0">Privacy Policy</p>
+          </div>
         </div>
-        <div>
-          <p class="fw-bold">Resourse</p>
-          <p class="mt-3 mb-0">Blogs</p>
-          <p class="mt-3 mb-0">Career</p>
-          <p class="mt-3 mb-0">Teams of Service</p>
-          <p class="mt-3 mb-0">Privacy Policy</p>
+        <div class="d-flex flex-wrap gap-5rem">
+          <div>
+            <p class="fw-bold">Our Office</p>
+            <p class="mt-3 mb-0">Sunnyvale, CA</p>
+            <p class="mt-3 mb-0">Boston, MA</p>
+            <p class="mt-3 mb-0">Bangalore, India</p>
+            <p class="mt-3 mb-0">Pune, India</p>
+          </div>
         </div>
-        <div>
-          <p class="fw-bold">Our Office</p>
-          <p class="mt-3 mb-0">Sunnyvale, CA</p>
-          <p class="mt-3 mb-0">Boston, MA</p>
-          <p class="mt-3 mb-0">Bangalore, India</p>
-          <p class="mt-3 mb-0">Pune, India</p>
-        </div>
-        <div class="location p-2 rounded-3">
-          <img src="./assets/footer/location.webp" alt="">
+        <!-- </div> -->
+        <div class="location d-flex p-2 rounded-3">
+          <img class="w-100" src="./assets/footer/location.webp" alt="">
         </div>
       </div>
     </div>
