--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Document</title>
+  <title>Hey-Stack</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
@@ -15,10 +15,12 @@
   <link rel="stylesheet" href="./static/css/testimonials.css">
   <link rel="stylesheet" href="./static/css/retailers.css">
   <link rel="stylesheet" href="./static/css/arrowbtn.css">
+  <link rel="stylesheet" href="./static/css/navbar.css">
   <script defer src="./static/js/main.js"></script>
   <script defer src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
   <script defer src="./static/js/testimonials.js"></script>
   <script defer src="./static/js/retailers.js"></script>
+  <script defer src="./static/js/navbar.js"></script>
 </head>
 
 <body>
@@ -26,39 +28,58 @@
     <div class="semicircle position-absolute bottom-0 start-0">
       <img src="./assets/generative/semicircle.webp" alt="" />
     </div>
+
     <div class="navbar position-relative">
-      <div class="logo d-flex align-items-center gap-2">
+      <div class="logo d-flex align-items-center gap-2 navbar-brand">
         <img class="logo-img" src="./assets/logo/logo.webp" alt="" />
-        <div>
-          <span class="">Heystack</span>
-        </div>
+        <span class="">Heystack</span>
       </div>
-      <div class="" id="navbarNav">
-        <ul class="navbar-nav d-flex flex-row nav-main">
-          <li class="nav-item">
-            <a class="nav-link" href="#">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Customers</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Prouducts</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Technology</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Retailers</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Blogs</a>
-          </li>
-        </ul>
-      </div>
+
+      <ul class="navbar-nav d-flex flex-row nav-main">
+        <li class="nav-item"> <a class="nav-link" href="#">Home</a> </li>
+        <li class="nav-item"> <a class="nav-link" href="#">Customers</a> </li>
+        <li class="nav-item"> <a class="nav-link" href="#">Prouducts</a> </li>
+        <li class="nav-item"> <a class="nav-link" href="#">Technology</a> </li>
+        <li class="nav-item"> <a class="nav-link" href="#">Retailers</a> </li>
+        <li class="nav-item"> <a class="nav-link" href="#">Blogs</a> </li>
+      </ul>
       <div class="nav-btn-container">
         <button class="nav-btn">SEE LIVE IN ACTION</button>
       </div>
+      <button class="navbar-toggle">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
     </div>
+
+    <div class="modal">
+      <div class="modal-content">
+        <div class="modal-header d-flex justify-content-between">
+          <div class="logo d-flex align-items-center gap-2 navbar-brand">
+            <img class="logo-img" src="./assets/logo/logo.webp" alt="" />
+            <span class="">Heystack</span>
+          </div>
+          <div class="close-btn modal-close">
+            <span class="" style="color: rgb(143, 143, 143);"><img src="./assets/logo/close.svg" alt=""></span>
+          </div>
+        </div>
+        <div class="padding-24 paddingx-20">
+          <ul class="modal-nav">
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Customers</a></li>
+            <li><a href="#">Products</a></li>
+            <li><a href="#">Technology</a></li>
+            <li><a href="#">Retailers</a></li>
+            <li><a href="#">Blogs</a></li>
+          </ul>
+          <div class="modal-nav-btn-container">
+            <button class="modal-nav-btn">SEE LIVE IN ACTION</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <div class="home-main position-relative d-flex align-items-center m-auto w-100">
       <div class="d-flex flex-column w-100">
         <div class="paddingx-40 mb-2">
@@ -583,7 +604,6 @@
         </div>
       </div>
       <div class="d-flex flex-wrap gap-5rem">
-        <!-- <div class="screen-586"> -->
         <div class="d-flex flex-wrap gap-5rem">
           <div class="">
             <p class="fw-bold">Home</p>
@@ -610,12 +630,13 @@
             <p class="mt-3 mb-0">Pune, India</p>
           </div>
         </div>
-        <!-- </div> -->
         <div class="location d-flex p-2 rounded-3">
           <img class="w-100" src="./assets/footer/location.webp" alt="">
         </div>
       </div>
     </div>
+    <p class="copy-right text-center p-2 m-0">© 2024 <a class="copy-right-link" href="">Heystack™</a>. All Rights
+      Reserved.</p>
   </div>
 
 </body>
